# server

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile.prod  README.md  compose.prod.yml  compose.yml  rustfmt.toml
.github/workflows/: build.yml  lint-and-format.yml  publish-prod-image.yml  test.yml
crates/domain/: Cargo.toml
crates/domain/src/: entity.rs  lib.rs
crates/domain/src/entity/: clear_type.rs  difficulty.rs  genre.rs  level.rs  mod.rs  music.rs  rating.rs  record.rs  sheet.rs  user.rs  user_play_option.rs
crates/domain/src/repository/: mod.rs  music.rs  record.rs  user.rs
crates/domain/src/service/: experience.rs  mod.rs  rating.rs
crates/domain/src/testing/: datetime.rs  mod.rs  user.rs
crates/infrastructure/: Cargo.toml  README.md
crates/infrastructure/src/: lib.rs  record.rs  user.rs
crates/infrastructure/src/entities/: mod.rs  musics.rs  prelude.rs  records.rs  sea_orm_active_enums.rs  sheets.rs  user_play_options.rs  users.rs
crates/infrastructure/src/model/: mod.rs  record.rs  user.rs  user_play_option.rs
crates/infrastructure/src/music/: adapter.rs  mod.rs  read.rs
crates/infrastructure/src/record/: adapter.rs  mapper.rs  mod.rs  query.rs  read.rs  write.rs
crates/infrastructure/src/user/: adapter.rs  error.rs  mod.rs  mutation.rs  query.rs  read.rs  tests.rs  write.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20251007_000001_create_users_table.rs  m20251007_000002_create_musics_table.rs  m20251007_000003_create_sheets_table.rs  m20251007_000004_create_records_table.rs  m20251007_000005_create_user_play_options_table.rs  main.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: config.rs  env.rs  error.rs  lib.rs  main.rs  state.rs
crates/presentation/src/error/: convert.rs  mod.rs
crates/presentation/src/model/: mod.rs  ranking.rs  statistics.rs  sync.rs  user.rs
crates/presentation/src/route/: mod.rs  ranking.rs  statistics.rs  sync.rs  user.rs
crates/usecase/: Cargo.toml
crates/usecase/src/: lib.rs  ranking.rs  statistics.rs  user.rs
crates/usecase/src/model/: mod.rs  music.rs  ranking.rs  statistics.rs  user.rs
crates/usecase/src/music/: mod.rs
crates/usecase/src/user/: credits.rs  dto.rs  mod.rs  options.rs  records.rs  register.rs  search.rs  update.rs
docs/: openapi.yaml
