[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
domain.workspace = true
sea-orm.workspace = true
tracing.workspace = true

[dev-dependencies]
domain = { workspace = true, features = ["test-support"] }
tokio.workspace = true
