[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
domain.workspace = true
usecase.workspace = true
infrastructure.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
