[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
domain.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
domain = { workspace = true, features = ["test-support"] }
