[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
domain.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
domain = { workspace = true, features = ["test-support"] }
tokio.workspace = true
